Add environment for namespace

--- a/development/01-environment.yaml
+++ b/development/01-environment.yaml
@@ -7,3 +7,4 @@ data:
   environment.target: "development"
   environment.consul_host: "consul-server.kube-system.svc.cluster.local"
   environment.consul_port: "8500"
+  environment.cluster_namespace: kube-system
