--- a/jj-development/01-environment.yaml
+++ b/jj-development/01-environment.yaml
@@ -4,6 +4,6 @@ metadata:
   name: system-environment
   namespace: kube-system
 data:
-  environment.target: "development"
+  environment.target: "jj-development"
   environment.consul_host: "consul-server.kube-system.svc.cluster.local"
   environment.consul_port: "8500"
